--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
                 <h1 id="userName">Jhenifer Christ</h1>
                 <a id="userLink" href="https://github.com/" target ="_blank">
-                <img src="images/github.svg" alt="Ícone Github"><span id="userLogin">JheniferC</span></a>
+                <img src="https://lorempixel.com/185/185/people/" alt="Ícone Github"><span id="userLogin">JheniferC</span></a>
                 <p id="UserBio">An instructor focused on helping people. Start programming web</p>
 
                 <ul div="socialLinks">
