--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                   <span>
                     <img src="images/build.svg" alt="Selo RockSeat" />
                   </span>  
-                    <img src="images/JC.png" alt="FotoPessoal" id="userImage"/>
+                    <img src="https://lorempixel.com/185/185/people/" alt="FotoPessoal" id="userImage"/>
                 </div>
 
                 <h1 id="userName">Jhenifer Christ</h1>
                 <a id="userLink" href="https://github.com/" target ="_blank">
-                <img src="https://lorempixel.com/185/185/people/" alt="Ícone Github"><span id="userLogin">JheniferC</span></a>
+                <img src="images/github.svg" alt="Ícone Github"><span id="userLogin">JheniferC</span></a>
                 <p id="UserBio">An instructor focused on helping people. Start programming web</p>
 
                 <ul div="socialLinks">
